namespace BetterThanMicrosPOS.Database.Tables
{
    public class OrderItem
    {
    }
}
